--- a/pre-reqs/tanzu-packages-cert-manager-sa.yaml
+++ b/pre-reqs/tanzu-packages-cert-manager-sa.yaml
@@ -12,7 +12,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: fluxcd-homelab
+    name: tmc-fluxcd-homelab
     namespace: tanzu-continuousdelivery-resources
 
 
