Use tanzu-helm-resources namespace for helm repos

--- a/wordpress-helm/helm-repo.yaml
+++ b/wordpress-helm/helm-repo.yaml
@@ -2,7 +2,8 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: bitnami
-  namespace: default
+  namespace: tanzu-helm-resources
 spec:
-  interval: 1m0s
+  interval: 10m0s
+  timeout: 60s
   url: https://charts.bitnami.com/bitnami
