--- a/wordpress-helm/helm-release.yaml
+++ b/wordpress-helm/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: bitnami
-        namespace: default
+        namespace: tanzu-helm-resources
       interval: 1m
   values:
     replicaCount: 1
