--- a/pre-reqs/helm-releases-wordpress-sa.yaml
+++ b/pre-reqs/helm-releases-wordpress-sa.yaml
@@ -2,20 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: helm-releases-wordpress
+  name: helm-releases-wordpress-sa
   namespace: tanzu-continuousdelivery-resources
 spec:
-  dependsOn:
-    - name: helm-releases-wordpress-sa
   interval: 1m0s
-  path: ./wordpress-helm
+  path: ./service-accounts/wordpress-sa
   prune: true
   sourceRef:
     kind: GitRepository
     name: tmc-flux-homelab
     namespace: tanzu-continuousdelivery-resources
-  healthChecks:
-    - apiVersion: apps/v1
-      kind: HelmRelease
-      name: wordpress
-      namespace: default
