--- a/pre-reqs/kustomization.yaml
+++ b/pre-reqs/kustomization.yaml
@@ -4,3 +4,4 @@ resources:
 - tanzu-packages-namespaces.yaml
 - tanzu-packages-cert-manager-sa.yaml
 - tanzu-packages-contour-sa.yaml
+- helm-releases-wordpress-sa.yaml
